Bug 119130 - Menu items opening with a delay in a document containing a large amount of comments ( not gtk3)
Summary: Menu items opening with a delay in a document containing a large amount of co...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.2 all versions
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.2.0 target:6.1.1
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2018-08-06 19:33 UTC by Telesto
Modified: 2018-10-10 16:13 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file (27.38 KB, application/vnd.oasis.opendocument.text)
2018-08-06 19:33 UTC, Telesto
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2018-08-06 19:33:16 UTC
Description:
Menu items opening with a delay in a document containing a large amount of comments

Steps to Reproduce:
1. Open the attached file
2. Access the file menu (or any item).
3. Click inside the document
4. Click the file menu again

It only slow the first time with LibO5.0. It's always slow since 5.2

Actual Results:
Slow menu opening

Expected Results:
No or less interacting between comments & menu


Reproducible: Always


User Profile Reset: No



Additional Info:
Found in
Version: 6.2.0.0.alpha0+
Build ID: 1b21ff86effe58ae368457de8fec654ba4c8edd9
CPU threads: 4; OS: Windows 6.3; UI render: default; 
TinderBox: Win-x86@42, Branch:master, Time: 2018-07-30_03:13:35
Locale: en-US (nl_NL); Calc: CL

and in
Version: 5.2.5.0.0+
Build ID: 78223678b7513ffe46804cb08f2dc5bc899b2bab
CPU Threads: 4; OS Version: Windows 6.29; UI Render: default; 
Locale: nl-NL (nl_NL); Calc: CL

but not in
Version: 5.0.0.0.alpha1+
Build ID: ab465b90f6c6da5595393a0ba73f33a1e71a2b65
Locale: nl-NL (nl_NL)
Comment 1 Telesto 2018-08-06 19:33:46 UTC
Created attachment 143997 [details]
Example file
Comment 2 Xisco Faulí 2018-08-06 21:31:15 UTC
Reproduced in

Version: 6.2.0.0.alpha0+
Build ID: 4804a1474ccba8df57f0a0151bd69237e82eb618
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk2; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group threaded

but not in


Version: 6.2.0.0.alpha0+
Build ID: 4804a1474ccba8df57f0a0151bd69237e82eb618
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group threaded
Comment 3 Xisco Faulí 2018-08-06 21:41:00 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=dd46727b99d4bb5135451aa7e5e1bdb197373843

author	Caolán McNamara <caolanm@redhat.com>	2016-04-05 15:27:38 +0100
committer	Caolán McNamara <caolanm@redhat.com>	2016-04-05 20:24:51 +0100
commit dd46727b99d4bb5135451aa7e5e1bdb197373843 (patch)
tree 47ee49810362bb405339682d27d36092d101cffc
parent 92d43df81e282d20c129b105b2c7300a312091eb (diff)
Resolves; tdf#87120 no keyboard navigation inside floating windows

Bisected with: bibisect-linux-64-5.2

Adding Cc: to Caolán McNamara
Comment 4 Caolán McNamara 2018-08-07 12:49:56 UTC
while the effect appears using menus since dd46727b99d4bb5135451aa7e5e1bdb197373843 it should be apparent before that when changing focus to something else, e.g. clicking in the fontname edit box
Comment 5 Commit Notification 2018-08-07 15:19:07 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b8a83417ed080b4c63b797d3f6837c49cdbdd2a2

tdf#119130 only have the active postit as a dialog control...

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Telesto 2018-08-09 09:16:06 UTC
No repro with
Version: 6.2.0.0.alpha0+ (x64)
Build ID: 0a1a4ffb4f87adff7fbbbc60202b6a0e42fedd0c
CPU threads: 4; OS: Windows 6.3; UI render: default; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2018-08-08_23:17:46
Locale: nl-NL (nl_NL); Calc: CL

It's also removed the delay while typing into the document. Quite an improvement ;-). Many thanks!
Comment 7 Caolán McNamara 2018-08-09 14:42:49 UTC
I'll call that fixed then, backport to 6-1 in gerrit
Comment 8 Xisco Faulí 2018-08-10 11:18:32 UTC
Verified in

Version: 6.2.0.0.alpha0+
Build ID: 53eda574a61396b6765cd1cb0ac9804c754ac4c1
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: threaded

@Caolán, thanks for fixing this!!
Comment 9 Commit Notification 2018-08-14 08:53:51 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=3fc47cda232e396b026f8f26f56f96e0f65dbccc&h=libreoffice-6-1

tdf#119130 only have the active postit as a dialog control...

It will be available in 6.1.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.