tdf#119130 only have the active postit as a dialog control...

in which pressing ctrl+tab cycles between text and button so we don't waste
time searching thousands of SwAnnotationWins

Change-Id: Iba34882c6588fc9414004f0ed3b2b779f77b30d1
Reviewed-on: https://gerrit.libreoffice.org/58682
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>