sw/source/uibase/docvw/AnnotationWin2.cxx
@@ -1109,10 +1109,20 @@ void SwAnnotationWin::ActivatePostIt()
 
     if ( !Application::GetSettings().GetStyleSettings().GetHighContrastMode() )
         GetOutlinerView()->SetBackgroundColor(mColorDark);
+
+    //tdf#119130 only have the active postit as a dialog control in which pressing
+    //ctrl+tab cycles between text and button so we don't waste time searching
+    //thousands of SwAnnotationWins
+    SetStyle(GetStyle() | WB_DIALOGCONTROL);
 }
 
 void SwAnnotationWin::DeactivatePostIt()
 {
+    //tdf#119130 only have the active postit as a dialog control in which pressing
+    //ctrl+tab cycles between text and button so we don't waste time searching
+    //thousands of SwAnnotationWins
+    SetStyle(GetStyle() & ~WB_DIALOGCONTROL);
+
     // remove selection, #i87073#
     if (GetOutlinerView()->GetEditView().HasSelection())
     {
